# jkr-core

./: .allowCommit  .bumpversion.cfg  .editorconfig  .env.template  .gitattributes  .gitignore  .testenv  CHANGELOG.md  Dockerfile  New-JKRAppRegistration.ps1  README.md  Set-JKRManagedIdentity.ps1  create_azure_app_registration.ps1  dev.docker-compose.yml  docker-compose.yml  dokumentaatio.md  dump.bat  import_and_create_kohteet.bat  import_dvv.sql  import_posti.sql  jkrimporter - Shortcut.lnk  kannanSchema.csv  pyproject.toml  runmigrations.bat  runmigrations.sh  scriptsrunner.bat  sql.ps1  startdev.ps1  startdev.sh  test.docker-compose.yml  testing.docker-compose.yml
.claude/: settings.local.json
.hooks/: README.md  pre-commit
db/: .tbls.yml  flyway.conf  jkr.dbm  permissions.sql
docs/: azure-arkkitehtuuri.md  entra-id-auth.md  liete.md
jkr/: __main__.py
jkrimporter/: __init__.py  conf.py  datasheets.py  kohdecreator.py  model.py
qgis/: jkr.qgs  pg_service.conf.template
scripts/: 2022.sh  2022_pohjadata.sh  2023.sh  2024.sh  2024_start.sh  2025.sh  all.sh  cherrypick_data.py  cherrypickfields.json  drop_schemas.bat  drop_schemas.sh  drop_schemas.sql  dump.bat  import_all.sh  import_and_create_kohteet.bat  import_and_create_kohteet.sh  import_dvv.bat  import_dvv.sh  import_dvv.sql  import_dvv_perusmaksu_posti.sh  import_hapa.bat  import_hapa.sh  import_kaivotieto.sh  import_katu.sql  import_kuljetustiedot_2022.sh  import_kuljetustiedot_2023.sh  import_kuljetustiedot_2024.sh  import_posti.bat  import_posti.sh  import_posti.sql  import_taajama.bat  import_taajama.sh  import_viemari.bat  import_viemari.sh  jkr.py  jkr_posti.sql  luo_suola_pseydolle.py  pseudofields.json  pseudonymisointi.py  restore.bat  (+13 more)
tests/: .env.template  conftest.py  test_akppoistosyy.py  test_data_import.py  test_data_import_dvv_kohteet.py  test_data_update_dvv_kohteet.py  test_date_utils.py  test_db_utils.py  test_ilmoitukset.py  test_intervals.py  test_kaivotiedot.py  test_kitu.py  test_kohteen_lietetietojen_siirto.py  test_kompostori.py  test_kompostori_end_dates.py  test_lahti_siirtotiedosto.py  test_liete_ilmoitukset.py  test_liete_kuljetustiedot.py  (+8 more)
(+336 files in other folders)
